src/test/deca/context/invalid/oracle/decl_inexisting_class.deca
class A{
    int x;
}

{
    B a = new A();
}